<resources>
    <string name="app_name">VRChat Mobile</string>
    <string name="action_settings">Settings</string>
    
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    
    <string name="notiON">App Notifications ON</string>
    <string name="notiOFF">App Notifications OFF</string>
    <string name="friendNotiON">All friend notifications ON</string>
    <string name="friendNotiOFF">All friend notifications OFF</string>
    <string name="notification_Title">Friend updater is active.</string>
    <string name="notification_subTitle">Sign out to stop</string>
    <string name="connectFriendsList">Online Friends List</string>
    <string name="unconnectFriendsList">Offline Friends List</string>
    <string name="memo">m e m o</string>
    <string name="nonVR">No VR</string>
    <string name="VR">VR</string>
    <string name="notiON_comment">You now have active connection notifications.</string>
    <string name="notiOFF_comment">You no longer have active connection notifications.</string>
    <string name="friendNotiON_comment">All friend notifications have been turned on.</string>
    <string name="friendNotiOFF_comment">All friend notifications have been turned off.</string>
    <string name="developerName">Developer: Aries Clark</string>
    <string name="developerVRChatID"></string>
    <string name="developerContact">ariesclark.public@gmail.com</string>
    <string name="online">Online Friends</string>
    <string name="offline">Offline Friends</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
</resources>
