<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/blue_border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developerName"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/under_line"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developerVRChatID"
        android:layout_margin="10dp"
        android:textStyle="italic"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/under_line"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developerContact"
        android:layout_margin="10dp"
        android:textStyle="italic"
        android:textSize="20dp"/>



</LinearLayout>