<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="Unknown Translation"
        android:layout_gravity="center"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_margin="5dp"
            android:id="@+id/memo_sexRadioButton_male"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_margin="5dp"
            android:id="@+id/memo_sexRadioButton_female"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="차렷"
            android:layout_margin="5dp"
            android:id="@+id/memo_vrRadioButton_novr"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VR"
            android:layout_margin="5dp"
            android:id="@+id/memo_vrRadioButton_vr"/>
    </RadioGroup>
</LinearLayout>
    
    <EditText
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:id="@+id/memo_editText"
        android:background="@drawable/edittext_border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memo_cancelButton"
            android:text="@string/cancel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memo_saveButton"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>